cluster/apps/productivity/homepage-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-client
spec:
  type: ClusterIP
  selector:
    app: homepage-client
  ports:
    - name: http
      port: 80
      targetPort: 3000
